[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodhound-ad"
version = "6.3.5"
description = "Six Degrees of Enterprise Domain Admin - Attack Path Management"
readme = "README.md"
authors = [
    {name = "byt3n33dl3", email = "byt3n33dl3@proton.me"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/byt3n33dl3/BloodHound"
Repository = "https://github.com/byt3n33dl3/BloodHound"
Issues = "https://github.com/byt3n33dl3/BloodHound/issues"
Wiki = "https://github.com/byt3n33dl3/BloodHound/wiki"
